--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 Grit_Flags.docx
 *.ini
-*.gba
-# BPRE0.gba
+# *.gba
+BPRE0.gba
 build/*
 */Images/*.h
 *.sgm
@@ -22,6 +22,7 @@ tables.xlsx
 cfru_thread.txt
 src/Tables/criminon_trainer_spreads.c
 Cover Art.png
+.vscode
 
 # generated temporary files
 .fuse*
